# ChangeLog for app-office/calligra
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/calligra/ChangeLog,v 1.17 2011/12/22 22:25:01 dilfridge Exp $

  22 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -calligra-2.3.83.ebuild:
  Remove old

  11 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  calligra-2.3.85.ebuild, +files/calligra-2.3.85-asneeded.patch:
  Fix build with tests enabled

*calligra-2.3.85 (10 Dec 2011)

  10 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +calligra-2.3.85.ebuild, calligra-9999.ebuild:
  Version bump

*calligra-2.3.84 (20 Nov 2011)

  20 Nov 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +calligra-2.3.84.ebuild:
  Version bump

*calligra-2.3.83 (29 Oct 2011)

  29 Oct 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -calligra-2.3.82.ebuild, +calligra-2.3.83.ebuild, calligra-9999.ebuild:
  Version bump; remove old

  17 Oct 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/calligra-2.3.74-jpeglcms-2.patch, calligra-2.3.82.ebuild,
  calligra-9999.ebuild:
  Drop redundant patch.

*calligra-2.3.82 (17 Oct 2011)

  17 Oct 2011; Tomáš Chvátal <scarabeus@gentoo.org> -calligra-2.3.81.ebuild,
  +calligra-2.3.82.ebuild:
  Version bump to latest beta.

  16 Sep 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  calligra-2.3.81.ebuild:
  Add missing qtwebkit dependency

*calligra-2.3.81 (15 Sep 2011)

  15 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org> -calligra-2.3.74.ebuild,
  -files/calligra-2.3.74-jpeglcms.patch,
  files/calligra-2.3.74-jpeglcms-2.patch, +calligra-2.3.81.ebuild,
  calligra-9999.ebuild:
  Version bump to the latest beta. Drop alpha.

*calligra-9999 (26 Aug 2011)

  26 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org> +calligra-9999.ebuild:
  Move live ebuild to main tree; it makes no sense to keep it alone in the kde
  overlay

  26 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  calligra-2.3.74.ebuild: