@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/calligra/Attic/calligra-2.3.84.ebuild,v 1.1 2011/11/20 17:54:57 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/calligra/Attic/calligra-2.3.86.ebuild,v 1.1 2012/01/07 23:38:31 dilfridge Exp $
 
 # note: files that need to be checked for dependencies etc:
 # CMakeLists.txt, kexi/CMakeLists.txt kexi/migration/CMakeLists.txt
@@ -12,8 +12,7 @@ KDE_SCM=git
 KDE_MINIMAL=4.6.4
 OPENGL_REQUIRED=optional
 
-# KDE_HANDBOOK=optional
-# no handbook in 83
+KDE_HANDBOOK=optional
 
 KDE_LINGUAS_LIVE_OVERRIDE=true
 inherit kde4-base
@@ -25,7 +24,7 @@ HOMEPAGE="http://www.calligra-suite.org/"
 LICENSE="GPL-2"
 SLOT="4"
 [[ ${PV} == 9999 ]] || KEYWORDS="~amd64 ~x86"
-IUSE="+crypt +eigen +exif fftw +fontconfig freetds +gif glew +glib +gsf
+IUSE="attica +crypt +eigen +exif fftw +fontconfig freetds +gif glew +glib +gsf
 gsl +iconv +jpeg jpeg2k +kdcraw kdepim +lcms marble mysql +mso +okular openctl openexr
 +pdf postgres +semantic-desktop +ssl sybase test tiff +threads +truetype
 +wmf word-perfect xbase +xml +xslt"
@@ -56,13 +55,13 @@ RDEPEND="
 	!app-office/kpresenter
 	!app-office/kspread
 	!app-office/kword
-	>=dev-db/sqlite-3.7.9:3
 	dev-lang/perl
 	dev-libs/boost
 	dev-libs/libxml2
 	$(add_kdebase_dep knewstuff)
 	media-libs/libpng
 	sys-libs/zlib
+	attica? ( dev-libs/libattica )
 	crypt? ( app-crypt/qca:2 )
 	eigen? ( dev-cpp/eigen:2 )
 	exif? ( media-gfx/exiv2 )
@@ -105,7 +104,10 @@ RDEPEND="
 	)
 	xbase? ( dev-db/xbase )
 	xslt? ( dev-libs/libxslt )
-	calligra_features_kexi? ( >=dev-db/sqlite-3.7.3 )
+	calligra_features_kexi? (
+		>=dev-db/sqlite-3.7.9:3[extensions]
+		dev-libs/icu
+	)
 "
 DEPEND="${RDEPEND}"
 
@@ -121,13 +123,13 @@ src_configure() {
 		"-DGHNS=ON"
 		"-DWITH_X11=ON"
 		"-DWITH_Qt4=ON"
+		"-DQT3SUPPORT=ON" # kde4-base.eclass pulls this in anyway
 	)
 
 	# default disablers
 	mycmakeargs+=(
 		"-DBUILD_mobile=OFF" # we dont suppor mobile gui, maybe arm could
 		"-DWITH_LCMS=OFF" # we use lcms:2
-		"-DWITH_XBase=OFF" # i am not the one to support this
 		"-DCREATIVEONLY=OFF"
 		"-DWITH_TINY=OFF"
 		"-DWITH_CreateResources=OFF" # NOT PACKAGED: http://create.freedesktop.org/
@@ -137,6 +139,7 @@ src_configure() {
 
 	# regular options
 	mycmakeargs+=(
+		$(cmake-utils_use_with attica LibAttica)
 		$(cmake-utils_use_with crypt QCA2)
 		$(cmake-utils_use_with eigen Eigen2)
 		$(cmake-utils_use_with exif Exiv2)
